[package]
name = "uniswap-utilities"
version = "0.1.1"
edition = "2021"
description = "A set of utility functions to interact with the uniswap protocol"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
