[package]
name = "uniswap-utilities"
version = "0.1.3"
edition = "2021"
description = "A set of utility functions to interact with the uniswap protocol"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/uniswap-utilities"
repository = "https://github.com/FredCoen/uniswap-utilities"

[dependencies]
ethers = "1.0.2"
